[gd_scene load_steps=7 format=3 uid="uid://dajmxignkgugv"]

[ext_resource type="Script" path="res://scripts/cabinet_mini_game.gd" id="1_c14l5"]
[ext_resource type="Texture2D" uid="uid://bw4sve8ej4b38" path="res://assets/cabinet_inner/inside_cab.png" id="2_7fsft"]
[ext_resource type="Texture2D" uid="uid://6h3xujoln1qg" path="res://assets/cabinet_inner/patch.png" id="3_alemb"]

[sub_resource type="AtlasTexture" id="AtlasTexture_y7hci"]
atlas = ExtResource("2_7fsft")

[sub_resource type="AtlasTexture" id="AtlasTexture_ubcfc"]
atlas = ExtResource("3_alemb")
region = Rect2(0, 64, 98, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_umw6j"]
atlas = ExtResource("3_alemb")
region = Rect2(0, 64, 98, 24)

[node name="cabinet2_mini_game" type="Control"]
z_index = 16
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -396.0
offset_bottom = -297.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_c14l5")

[node name="Background" type="TextureRect" parent="."]
z_index = 15
layout_mode = 0
offset_right = 300.0
offset_bottom = 200.0
texture = SubResource("AtlasTexture_y7hci")
expand_mode = 1

[node name="PatchPanelTop" type="TextureRect" parent="."]
z_index = 16
layout_mode = 0
offset_left = 61.0
offset_top = 41.0
offset_right = 251.0
offset_bottom = 97.0
texture = SubResource("AtlasTexture_ubcfc")

[node name="Port_A1" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 25.0
offset_bottom = 26.0

[node name="Port_A2" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 28.0
offset_top = 10.0
offset_right = 44.0
offset_bottom = 26.0

[node name="Port_A3" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 47.0
offset_top = 10.0
offset_right = 63.0
offset_bottom = 26.0

[node name="Port_A4" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 67.0
offset_top = 10.0
offset_right = 83.0
offset_bottom = 26.0

[node name="Port_A5" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 87.0
offset_top = 10.0
offset_right = 103.0
offset_bottom = 26.0

[node name="Port_A6" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 105.0
offset_top = 10.0
offset_right = 121.0
offset_bottom = 26.0

[node name="Port_A7" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 125.0
offset_top = 10.0
offset_right = 141.0
offset_bottom = 26.0

[node name="Port_A8" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 145.0
offset_top = 10.0
offset_right = 161.0
offset_bottom = 26.0

[node name="Port_A9" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 164.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 26.0

[node name="Port_B1" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 9.0
offset_top = 31.0
offset_right = 25.0
offset_bottom = 47.0

[node name="Port_B2" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 28.0
offset_top = 31.0
offset_right = 44.0
offset_bottom = 47.0

[node name="Port_B3" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 47.0
offset_top = 31.0
offset_right = 63.0
offset_bottom = 47.0

[node name="Port_B4" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 67.0
offset_top = 31.0
offset_right = 83.0
offset_bottom = 47.0

[node name="Port_B5" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 87.0
offset_top = 31.0
offset_right = 103.0
offset_bottom = 47.0

[node name="Port_B6" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 105.0
offset_top = 31.0
offset_right = 121.0
offset_bottom = 47.0

[node name="Port_B7" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 125.0
offset_top = 31.0
offset_right = 141.0
offset_bottom = 47.0

[node name="Port_B8" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 145.0
offset_top = 31.0
offset_right = 161.0
offset_bottom = 47.0

[node name="Port_B9" type="TextureButton" parent="PatchPanelTop"]
z_index = 17
layout_mode = 0
offset_left = 164.0
offset_top = 31.0
offset_right = 180.0
offset_bottom = 47.0

[node name="PatchPanelBottom" type="TextureRect" parent="."]
z_index = 16
layout_mode = 0
offset_left = 61.0
offset_top = 116.0
offset_right = 251.0
offset_bottom = 171.0
texture = SubResource("AtlasTexture_umw6j")

[node name="Port_A1" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 9.0
offset_top = 10.0
offset_right = 25.0
offset_bottom = 26.0

[node name="Port_A2" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 28.0
offset_top = 10.0
offset_right = 44.0
offset_bottom = 26.0

[node name="Port_A3" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 47.0
offset_top = 10.0
offset_right = 63.0
offset_bottom = 26.0

[node name="Port_A4" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 67.0
offset_top = 10.0
offset_right = 83.0
offset_bottom = 26.0

[node name="Port_A5" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 87.0
offset_top = 10.0
offset_right = 103.0
offset_bottom = 26.0

[node name="Port_A6" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 105.0
offset_top = 10.0
offset_right = 121.0
offset_bottom = 26.0

[node name="Port_A7" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 125.0
offset_top = 10.0
offset_right = 141.0
offset_bottom = 26.0

[node name="Port_A8" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 145.0
offset_top = 10.0
offset_right = 161.0
offset_bottom = 26.0

[node name="Port_A9" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 164.0
offset_top = 10.0
offset_right = 180.0
offset_bottom = 26.0

[node name="Port_B1" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 9.0
offset_top = 31.0
offset_right = 25.0
offset_bottom = 47.0

[node name="Port_B2" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 28.0
offset_top = 31.0
offset_right = 44.0
offset_bottom = 47.0

[node name="Port_B3" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 47.0
offset_top = 31.0
offset_right = 63.0
offset_bottom = 47.0

[node name="Port_B4" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 67.0
offset_top = 31.0
offset_right = 83.0
offset_bottom = 47.0

[node name="Port_B5" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 87.0
offset_top = 31.0
offset_right = 103.0
offset_bottom = 47.0

[node name="Port_B6" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 105.0
offset_top = 31.0
offset_right = 121.0
offset_bottom = 47.0

[node name="Port_B7" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 125.0
offset_top = 31.0
offset_right = 141.0
offset_bottom = 47.0

[node name="Port_B8" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 145.0
offset_top = 31.0
offset_right = 161.0
offset_bottom = 47.0

[node name="Port_B9" type="TextureButton" parent="PatchPanelBottom"]
z_index = 17
layout_mode = 0
offset_left = 164.0
offset_top = 31.0
offset_right = 180.0
offset_bottom = 47.0

[node name="CableContainer" type="Node2D" parent="."]
z_index = 50

[node name="ConnectorsContainer" type="Node2D" parent="."]
z_index = 19

[node name="RichTextLabel" type="RichTextLabel" parent="."]
z_index = 17
layout_mode = 0
offset_left = 39.0
offset_top = 12.0
offset_right = 269.0
offset_bottom = 35.0
text = "Connect Top A3 to Bottom A1"
fit_content = true

[node name="ContinueButton" type="TextureButton" parent="."]
z_index = 17
layout_mode = 0
offset_left = 117.0
offset_top = 169.0
offset_right = 197.0
offset_bottom = 199.0
action_mode = 0

[node name="RichTextLabel2" type="RichTextLabel" parent="ContinueButton"]
z_index = 18
layout_mode = 0
offset_left = -3.0
offset_top = -2.00003
offset_right = 71.0
offset_bottom = 22.0
mouse_filter = 2
text = "Continue"
